--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@tauri-apps/api": "^1.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "framer-motion": "^4.1.17",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
