Added Login + Web3 Functionality

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@solana/wallet-adapter-phantom": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.30",
     "@tauri-apps/api": "^1.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
