--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@solana/wallet-adapter-phantom": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@tauri-apps/api": "^1.2.0",
+    "@types/firebase": "^3.2.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.17.2",
     "framer-motion": "^4.1.17",
     "next": "13.0.2",
     "react": "18.2.0",
