--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "typescript": "4.8.4"
   },
   "devDependencies": {
